@@ -2,6 +2,7 @@
 
 export("U<-")
 export("V<-")
+export("gdata<-")
 export("select_matrix<-")
 export(C_code)
 export(Nn)
@@ -18,6 +19,7 @@ export(events)
 export(events_SEIR)
 export(events_SIR)
 export(events_SISe)
+export(gdata)
 export(indegree)
 export(init)
 export(mparse)
